# src/controllers/authController.ts
@@ -5,23 +5,21 @@ const router = Router();
 
 
 export const loginAdmin = (req: Request, res: Response) => {
-  /*
+    /*
       #swagger.tags = ['Login']
       #swagger.parameters['obj'] = {
               in: 'body',
               description: "Models Login",
-              schema: { $ref: '#/definitions/Login' }
+              schema: { $ref: '#/definitions/SuperAdminLogin' }
           }
      */
     const { username, password } = req.body;
 
-    
-    
     // Authenticate the user and generate a token
     const token = authenticateUser(username, password);
     if (token) {
         return res.json({ token });
     } else {
-      return res.status(401).json({ message: 'Invalid credentials' });
+        return res.status(401).json({ message: 'Invalid credentials' });
     }
-  }
+}
